package lisp.eval;

/**
 * クロージャ
 * 
 * @author tetsuya
 *
 */
public class Closure implements SExpression {

	static void closure() {

	}

	public SExpression apply(SExpression evalArgu, Environment env) {
		// TODO Auto-generated method stub
		return null;
	}

	public static SExpression getInstance(SExpression body, SExpression params, Environment environment) {
		// TODO Auto-generated method stub
		return null;
	}

}
