package lisp.eval;

//import javafx.*;
import java.awt.*;

public class Graphics implements SExpression {
	private static void drawLine(){
		
	}

	private static void clear() {

	}

	private static void setColor(){
		
	}

	private static void fillOval(){
		
	}

}
